Fixed background image so that it does not stretch with more content

--- a/style.css
+++ b/style.css
@@ -7,13 +7,17 @@
 
 body {
 	background-image: url("images/wood.jpg");
-	background-size: cover;
+	background-size: 100%;
+	background-repeat: repeat;
 }
 
 #frontpage {
 	font-size: 100px;
 	margin: 180px;
+	opacity: 0.2;
 }
+
+
 
 nav {
 	height: 75px;
@@ -24,9 +28,6 @@ nav {
 	width: 100%;
 }
 
-/*nav a {
-	color: #ffffcc;
-}*/
 nav li{
 	list-style-type: none;
 	float: right;
